Cyclical coordinate descent

--- a/ml-regression/Lasso Regression/week-5-lasso-assignment-2-blank.ipynb
+++ b/ml-regression/Lasso Regression/week-5-lasso-assignment-2-blank.ipynb
@@ -630,13 +630,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def lasso_cyclical_coordinate_descent(feature_matrix, output, initial_weights, l1_penalty, tolerance):\n",
+    "    \n",
+    "    weights = np.copy(initial_weights)\n",
+    "    maximum_change = 0\n",
+    "    \n",
+    "    while True:        \n",
+    "        old_weights = np.copy(weights)\n",
+    "                        \n",
+    "        for i in range(len(weights)):\n",
+    "            weights[i] = lasso_coordinate_descent_step(i, feature_matrix, output, weights, l1_penalty)        \n",
+    "            \n",
+    "        maximum_change = max(abs(old_weights-weights))\n",
+    "        if maximum_change < tolerance:\n",
+    "            break\n",
+    "\n",
+    "    return weights\n",
     "    "
    ]
   },
@@ -649,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -671,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -690,14 +705,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RSS: 1.63049248148e+15\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 21624998.36636352,  63157246.78545319,         0.        ])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "weights = lasso_cyclical_coordinate_descent(normalized_simple_feature_matrix, output,\n",
-    "                                            initial_weights, l1_penalty, tolerance)"
+    "                                            initial_weights, l1_penalty, tolerance)\n",
+    "\n",
+    "predictions = predict_output(normalized_simple_feature_matrix, weights)\n",
+    "error = (predictions-output)\n",
+    "rss = (error*error).sum()\n",
+    "print('RSS: '+str(rss))\n",
+    "weights\n"
    ]
   },
   {
