Evaluate Cyclical Coordinate descent

--- a/ml-regression/Lasso Regression/week-5-lasso-assignment-2-blank.ipynb
+++ b/ml-regression/Lasso Regression/week-5-lasso-assignment-2-blank.ipynb
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -812,12 +812,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "(feature_matrix, output) = get_numpy_data(train_data, all_features, my_output)\n",
+    "(normalized_feature_matrix, norms) = normalize_features(feature_matrix) # normalize features"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -828,12 +831,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "initial_weights = np.zeros(len(all_features)+1)\n",
+    "tolerance = 1\n",
+    "l1_penalty=1e7\n",
+    "weights1e7 = lasso_cyclical_coordinate_descent(normalized_feature_matrix, output,\n",
+    "                                            initial_weights, l1_penalty, tolerance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('constant', 24429600.609333459),\n",
+       " ('bedrooms', 0.0),\n",
+       " ('bathrooms', 0.0),\n",
+       " ('sqft_living', 48389174.352279589),\n",
+       " ('sqft_lot', 0.0),\n",
+       " ('floors', 0.0),\n",
+       " ('waterfront', 3317511.1627197945),\n",
+       " ('view', 7329961.9848963786),\n",
+       " ('condition', 0.0),\n",
+       " ('grade', 0.0),\n",
+       " ('sqft_above', 0.0),\n",
+       " ('sqft_basement', 0.0),\n",
+       " ('yr_built', 0.0),\n",
+       " ('yr_renovated', 0.0)]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip(['constant']+all_features, weights1e7)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -855,12 +899,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "initial_weights = np.zeros(len(all_features)+1)\n",
+    "tolerance = 1\n",
+    "l1_penalty=1e8\n",
+    "weights1e8 = lasso_cyclical_coordinate_descent(normalized_feature_matrix, output,\n",
+    "                                            initial_weights, l1_penalty, tolerance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('constant', 71114625.75280942),\n",
+       " ('bedrooms', 0.0),\n",
+       " ('bathrooms', 0.0),\n",
+       " ('sqft_living', 0.0),\n",
+       " ('sqft_lot', 0.0),\n",
+       " ('floors', 0.0),\n",
+       " ('waterfront', 0.0),\n",
+       " ('view', 0.0),\n",
+       " ('condition', 0.0),\n",
+       " ('grade', 0.0),\n",
+       " ('sqft_above', 0.0),\n",
+       " ('sqft_basement', 0.0),\n",
+       " ('yr_built', 0.0),\n",
+       " ('yr_renovated', 0.0)]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip(['constant']+all_features, weights1e8)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -880,12 +965,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "initial_weights = np.zeros(len(all_features)+1)\n",
+    "tolerance = 5e5\n",
+    "l1_penalty=1e4\n",
+    "weights1e4 = lasso_cyclical_coordinate_descent(normalized_feature_matrix, output,\n",
+    "                                            initial_weights, l1_penalty, tolerance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('constant', 77779073.912650257),\n",
+       " ('bedrooms', -22884012.250232693),\n",
+       " ('bathrooms', 15348487.080899367),\n",
+       " ('sqft_living', 92166869.698831469),\n",
+       " ('sqft_lot', -2139328.0824277275),\n",
+       " ('floors', -8818455.5440945607),\n",
+       " ('waterfront', 6494209.7331065638),\n",
+       " ('view', 7065162.0505320095),\n",
+       " ('condition', 4119079.2100677951),\n",
+       " ('grade', 18436483.526187912),\n",
+       " ('sqft_above', -14566678.545144072),\n",
+       " ('sqft_basement', -5528348.7517945003),\n",
+       " ('yr_built', -83591746.20730418),\n",
+       " ('yr_renovated', 2784276.4601285676)]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip(['constant']+all_features, weights1e4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -933,12 +1059,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "normalized_weights1e4 = weights1e4/norms\n",
+    "normalized_weights1e7 = weights1e7/norms\n",
+    "normalized_weights1e8 = weights1e8/norms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "161.317456248\n"
+     ]
+    }
+   ],
+   "source": [
+    "print normalized_weights1e7[3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -967,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -985,30 +1134,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RSS 1e4: 2.2778100476e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted1e4 = predict_output(test_feature_matrix, normalized_weights1e4)\n",
+    "error1e4 = predicted1e4-test_output\n",
+    "rss1e4 = (error1e4*error1e4).sum()\n",
+    "print('RSS 1e4: '+str(rss1e4))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RSS 1e7: 2.75962079909e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted1e7 = predict_output(test_feature_matrix, normalized_weights1e7)\n",
+    "error1e7 = predicted1e7-test_output\n",
+    "rss1e7 = (error1e7*error1e7).sum()\n",
+    "print('RSS 1e7: '+str(rss1e7))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RSS 1e8: 5.37166150034e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted1e8 = predict_output(test_feature_matrix, normalized_weights1e8)\n",
+    "error1e8 = predicted1e8-test_output\n",
+    "rss1e8 = (error1e8*error1e8).sum()\n",
+    "print('RSS 1e8: '+str(rss1e8))"
+   ]
   },
   {
    "cell_type": "markdown",
