Extracting features and normalize

--- a/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
+++ b/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -45,11 +45,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create for academic use is assigned to wilson_jr@outlook.com and will expire on January 07, 2018.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wilson\\AppData\\Local\\Temp\\graphlab_server_1494118037.log.0\n"
+     ]
+    }
+   ],
    "source": [
     "sales = graphlab.SFrame('kc_house_data_small.gl/')"
    ]
@@ -70,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -81,12 +96,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_numpy_data(data_sframe, features, output):\n",
+    "    data_sframe['constant'] = 1 # this is how you add a constant column to an SFrame\n",
+    "    # add the column 'constant' to the front of the features list so that we can extract it along with the others:\n",
+    "    features = ['constant'] + features # this is how you combine two lists\n",
+    "    # select the columns of data_SFrame given by the features list into the SFrame features_sframe (now including constant):\n",
+    "    features_sframe = data_sframe[features]\n",
+    "    # the following line will convert the features_SFrame into a numpy matrix:\n",
+    "    feature_matrix = features_sframe.to_numpy()\n",
+    "    # assign the column of data_sframe associated with the output to the SArray output_sarray\n",
+    "    output_sarray = data_sframe[output]\n",
+    "    # the following will convert the SArray into a numpy array by first converting it to a list\n",
+    "    output_array = output_sarray.to_numpy()\n",
+    "    return(feature_matrix, output_array)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,12 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def normalize_features(feature_matrix):\n",
+    "    norms = np.linalg.norm(feature_matrix, axis=0)\n",
+    "    normalized_features = feature_matrix/norms\n",
+    "    return (normalized_features, norms)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -178,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
