Compute multiple distances

--- a/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
+++ b/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
@@ -241,12 +241,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.01345102  0.01551285  0.01807473  0.01759212  0.00160518  0.017059    0.\n",
+      "  0.05102365  0.0116321   0.01564352  0.01362084  0.02481682  0.01350306\n",
+      "  0.          0.01345386 -0.01346927  0.01375926  0.0016225 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(features_test[0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -257,12 +269,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.01345102  0.01163464  0.00602491  0.0083488   0.00050756  0.01279425\n",
+      "  0.          0.          0.01938684  0.01390535  0.0096309   0.\n",
+      "  0.01302544  0.          0.01346821 -0.01346254  0.01195898  0.00156612]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(features_train[9])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -277,12 +301,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "distance: 0.0597235937167\n"
+     ]
+    }
+   ],
+   "source": [
+    "distance = np.sqrt(np.sum(np.subtract(features_test[0], features_train[9])**2))\n",
+    "print('distance: '+str(distance))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -304,12 +339,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0602747091729555, 0.085468811488270832, 0.061499464371202843, 0.053402739788200579, 0.058444840639381393, 0.059879215101840008, 0.054631404972615261, 0.055431083241597921, 0.052383627840972731, 0.059723593716661257]\n"
+     ]
+    }
+   ],
+   "source": [
+    "distances = []\n",
+    "\n",
+    "for i in range(10):\n",
+    "    distance = np.sqrt(np.sum(np.subtract(features_test[0], features_train[i])**2))\n",
+    "    distances.append(distance)\n",
+    "    \n",
+    "print(distances)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -322,12 +373,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min dist: 0.0597235937167\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('min dist: '+str(distances[len(distances)-1]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -345,12 +406,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0.00000000e+00  -3.87821276e-03  -1.20498190e-02  -1.05552733e-02\n",
+      "   2.08673616e-04  -8.52950206e-03   0.00000000e+00  -5.10236549e-02\n",
+      "   0.00000000e+00  -3.47633726e-03  -5.50336860e-03  -2.48168183e-02\n",
+      "  -1.63756198e-04   0.00000000e+00  -1.70072004e-05   1.30577772e-05\n",
+      "  -5.14364795e-03   6.69281453e-04]\n",
+      "[  0.00000000e+00  -3.87821276e-03  -4.51868214e-03  -2.26610387e-03\n",
+      "   7.19763456e-04   0.00000000e+00   0.00000000e+00  -5.10236549e-02\n",
+      "   0.00000000e+00  -3.47633726e-03   1.30705004e-03  -1.45830788e-02\n",
+      "  -1.91048898e-04   6.65082271e-02   4.23240653e-05   6.22415897e-06\n",
+      "  -2.89330197e-03   1.47606982e-03]\n",
+      "[  0.00000000e+00  -7.75642553e-03  -1.20498190e-02  -1.30002801e-02\n",
+      "   1.60518166e-03  -8.52950206e-03   0.00000000e+00  -5.10236549e-02\n",
+      "   0.00000000e+00  -5.21450589e-03  -8.32384500e-03  -2.48168183e-02\n",
+      "  -3.13866046e-04   0.00000000e+00   4.71047219e-05   1.56530415e-05\n",
+      "   3.72914476e-03   1.64764925e-03]\n"
+     ]
+    }
+   ],
    "source": [
     "for i in xrange(3):\n",
     "    print features_train[i]-features_test[0]\n",
@@ -366,11 +449,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0.00000000e+00  -3.87821276e-03  -1.20498190e-02  -1.05552733e-02\n",
+      "    2.08673616e-04  -8.52950206e-03   0.00000000e+00  -5.10236549e-02\n",
+      "    0.00000000e+00  -3.47633726e-03  -5.50336860e-03  -2.48168183e-02\n",
+      "   -1.63756198e-04   0.00000000e+00  -1.70072004e-05   1.30577772e-05\n",
+      "   -5.14364795e-03   6.69281453e-04]\n",
+      " [  0.00000000e+00  -3.87821276e-03  -4.51868214e-03  -2.26610387e-03\n",
+      "    7.19763456e-04   0.00000000e+00   0.00000000e+00  -5.10236549e-02\n",
+      "    0.00000000e+00  -3.47633726e-03   1.30705004e-03  -1.45830788e-02\n",
+      "   -1.91048898e-04   6.65082271e-02   4.23240653e-05   6.22415897e-06\n",
+      "   -2.89330197e-03   1.47606982e-03]\n",
+      " [  0.00000000e+00  -7.75642553e-03  -1.20498190e-02  -1.30002801e-02\n",
+      "    1.60518166e-03  -8.52950206e-03   0.00000000e+00  -5.10236549e-02\n",
+      "    0.00000000e+00  -5.21450589e-03  -8.32384500e-03  -2.48168183e-02\n",
+      "   -3.13866046e-04   0.00000000e+00   4.71047219e-05   1.56530415e-05\n",
+      "    3.72914476e-03   1.64764925e-03]]\n"
+     ]
+    }
+   ],
    "source": [
     "print features_train[0:3] - features_test[0]"
    ]
@@ -384,11 +489,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n"
+     ]
+    }
+   ],
    "source": [
     "# verify that vectorization works\n",
     "results = features_train[0:3] - features_test[0]\n",
