Perform 1-nearest neighbor regression

--- a/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
+++ b/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
@@ -533,12 +533,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "diff = features_train[0:len(features_train)]-features_test[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -549,11 +551,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.0934339605842\n"
+     ]
+    }
+   ],
    "source": [
     "print diff[-1].sum() # sum of the feature differences between the query and last training house\n",
     "# should print -0.0934339605842"
@@ -572,11 +582,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00330705902879\n",
+      "0.00330705902879\n"
+     ]
+    }
+   ],
    "source": [
     "print np.sum(diff**2, axis=1)[15] # take sum of squares across each row, and print the 16th sum\n",
     "print np.sum(diff[15]**2) # print the sum of squares for the 16th row -- should be same as above"
@@ -593,12 +612,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "distances = np.sqrt(np.sum(diff**2, axis=1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -609,11 +630,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0237082324496\n"
+     ]
+    }
+   ],
    "source": [
     "print distances[100] # Euclidean distance between the query house and the 101th training house\n",
     "# should print 0.0237082324496"
@@ -628,12 +657,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def compute_distances(feature_matrix, query):\n",
+    "    diff = feature_matrix[0:len(feature_matrix)]-query\n",
+    "    return np.sqrt(np.sum(diff**2, axis=1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -649,21 +682,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min index: 382\n"
+     ]
+    }
+   ],
+   "source": [
+    "distances2 = compute_distances(features_train, features_test[2])\n",
+    "min_index = np.argmin(distances2)\n",
+    "print('min index: '+str(min_index))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predicted value: 249000\n"
+     ]
+    }
+   ],
+   "source": [
+    "value = train[min_index]['price']\n",
+    "\n",
+    "print('predicted value: '+str(value))"
+   ]
   },
   {
    "cell_type": "markdown",
