Perform k-nearest neighbor regression

--- a/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
+++ b/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
@@ -754,12 +754,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def k_nearest_neighbors(k, feature_matrix, feature_vector):\n",
+    "    distances = compute_distances(feature_matrix, feature_vector)\n",
+    "    return np.argsort(distances)[0:k]       "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -772,12 +776,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 382, 1149, 4087, 3142], dtype=int64)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indices = k_nearest_neighbors(4, features_train, features_test[2])\n",
+    "indices"
+   ]
   },
   {
    "cell_type": "markdown",
