Make a single prediction by averaging k nearest neighbor outputs

--- a/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
+++ b/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
@@ -821,12 +821,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def predict_knn(k, feature_matrix, output, feature_vector):\n",
+    "    indices = k_nearest_neighbors(k, feature_matrix, feature_vector)\n",
+    "    prices = output[indices]\n",
+    "    return np.sum(prices)/len(indices)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -839,12 +844,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "price: 413987\n"
+     ]
+    }
+   ],
+   "source": [
+    "price = predict_knn(4, features_train, output_train, features_test[2])\n",
+    "print('price: '+str(price))"
+   ]
   },
   {
    "cell_type": "markdown",
