Make multiple predictions

--- a/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
+++ b/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
@@ -893,12 +893,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def multiple_knn(k, feature_matrix, output, query_set):\n",
+    "    predicted = []\n",
+    "    for i in range(query_set.shape[0]):\n",
+    "        price = predict_knn(k, feature_matrix, output, query_set[i])\n",
+    "        predicted.append(price)\n",
+    "    return predicted"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -914,12 +921,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min index: 6\n",
+      "value: 350032\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted_values = multiple_knn(10, features_train, output_train, features_test[0:10])\n",
+    "min_index = np.argmin(predicted_values)\n",
+    "print('min index: '+str(min_index))\n",
+    "print('value: '+str(predicted_values[min_index]))\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
