--- a/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
+++ b/ml-regression/Nearest Neighbor Regression/week-6-local-regression-assignment-blank.ipynb
@@ -939,9 +939,7 @@
     "predicted_values = multiple_knn(10, features_train, output_train, features_test[0:10])\n",
     "min_index = np.argmin(predicted_values)\n",
     "print('min index: '+str(min_index))\n",
-    "print('value: '+str(predicted_values[min_index]))\n",
-    "\n",
-    "\n"
+    "print('value: '+str(predicted_values[min_index]))"
    ]
   },
   {
@@ -973,12 +971,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "rss_all = []\n",
+    "for k in range(1, 16):\n",
+    "    prediction = multiple_knn(k, features_train, output_train, features_valid)\n",
+    "    error = prediction-output_valid\n",
+    "    rss = (error*error).sum()\n",
+    "    rss_all.append(rss)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -991,11 +996,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x1f742630>]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX0AAAEGCAYAAACJnEVTAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XuYVNWZ7/Hvr0W8gHfUcNEG2vsdNKgQTRnHiCZq4mQy\nKM4E4y0XiXMyTtQkpJun84w642QSL2fymBgZJyi5mRNz4iSQoz0RFcWAgApya1tuY2JEBBIzSL/n\nj10NRXd1V3VT1bu66/d5nnq69t5r7/327d2r1lp7bUUEZmZWHWrSDsDMzHqPk76ZWRVx0jczqyJO\n+mZmVcRJ38ysijjpm5lVkYpK+pIekPSGpMVFlD1H0m8lbZN0eZ7t+0laI+nu8kRrZtb3VFTSBx4E\nLiyybAvwKWBmJ9sbgf8qRVBmZv1FRSX9iJgLbMxdJ2m0pP+UNF/Sf0k6Jlv29Yh4Cehwd5mk04HD\ngNm9EbeZWV9RUUm/E/cDN0bE+4F/AP6tq8KSBNwF3Ayo/OGZmfUdA9IOoCuSBgHjgR9lkznAngV2\n+xzwi4hYn93Fid/MLKuikz7JJ5GNETG2G/ucDXxA0ueA/YA9JW2OiC+XJUIzsz6kYPNOoRE1ko6V\n9IykdyV9sd22iZKWSVou6ZYiY1L2RURsBpolfSLnmKd0sg/Zfa6KiJERMZqkiechJ3wzs0QxbfqF\nRtT8AZgK/HPuSkk1wL3ZfU8ErpB0XFcnkvQw8AxwjKTXJV0NTAaukfSipJeAS7Nlz5C0BvgE8G1J\nS4r4XszMqpqKmVpZUi3w84jIV8tuK1MPbI6Ib2SXzwLqI+Ki7PKtQETEnSWJ3MzMuq2co3eGA2ty\nltdm15mZWUr6wpBNMzMrkXKO3lkHHJmzPCK7Li9JfoSXmVk3RUS3hqUXW9PfMaKmiHJt5gNHSaqV\nNBCYBDzW1c4RUdGv+vr61GNwnI7TcTrOtldPFKzpZ0fUZIBDJL0O1AMDkxwd90s6HHiBZEx8q6Sb\ngBMiYoukG0mmQqgBHoiIpT2K0szMSqJg0o+IKwtsfwM4opNtvwSO7VloZmZWau7I7YZMJpN2CEVx\nnKXlOEvLcaarqHH6vUFSVEosZmZ9gSSiTB25ZmbWDzjpm5lVESd9M7Mq4qRvZlZFnPTNzKqIk76Z\nWRVx0jczqyJO+mZmVcRJ38ysijjpm5lVESd9M7Mq4qRvZlZFnPTNzKpIOR+XmJrm5hamTZvBunWt\nDB9eQ2PjFEaNqk07LDOz1BWcWlnSA8BHgTci4pROytwNXARsBa6OiIXZ9a8Bm4BWYFtEjOviPCWZ\nWrm5uYULLriHVaumA4OArdTV1TNnzlQnfjPrV8o1tfKDwIVdnPQioC4ijgZuAP4tZ3MrkImIMV0l\n/FKaNm1GTsIHGMSqVdOZNm1Gb5zezKyiFUz6ETEX2NhFkcuAh7JlnwMOyD43F5IHpfdqv8G6da3s\nTPhtBrF+fWtvhmFmVpFKkZCHA2tyltdl1wEEMEfSfEnXleBchYMZXkPSypRrK8OGuc/azKzcHbkT\nImKDpENJkv/S7CeHvBoaGna8z2QyPXpGZWPjFObNq+/Qpt/YOLXbxzIzqyRNTU00NTXt1jGKekau\npFrg5/k6ciV9G3gyIn6QXV4GfDAi3mhXrh7YHBHf6OQcJXtGbnNzC1deOYPVq1u54AKP3jGz/qkn\nHbnFJv2RJEn/5DzbLgY+HxEfkXQW8M2IOEvSvkBNRGyRNAiYDUyPiNmdnKOkD0ZfvBg++UlYtqxk\nhzQzqyg9SfoFm3ckPQxkgEMkvQ7UAwOBiIj7I+JxSRdLWkl2yGZ218OBn0qK7Hlmdpbwy+H44+H1\n12HLFhg8uLfOamZW2Yqq6feGUtf0Ac44A+6+G8aPL+lhzcwqQrnG6fdZY8bAwoVpR2FmVjmc9M3M\nqki/T/oLFqQdhZlZ5ejXbfpbt8KQIbBpEwwcWNJDm5mlzm367QwaBCNHwiuvpB2JmVll6NdJH2Ds\nWLfrm5m16fdJ3525ZmY7OembmVWRft2RC/DWW0m7/ttvQ02/v8SZWTVxR24eBx8MBx0Eq1alHYmZ\nWfr6fdIHN/GYmbVx0jczqyJO+mZmVaSqkn6F9FmbmaWmKpL+iBGwfTts2JB2JGZm6aqKpC+5icfM\nDIpI+pIekPSGpMVdlLlb0gpJL0o6LWf9REnLJC2XdEupgu4JJ30zs+Jq+g8CF3a2UdJFQF1EHA3c\nAHw7u74GuDe774nAFZKO2+2Ie8jTLJuZFZH0I2IusLGLIpcBD2XLPgccIOlwYBywIiJaImIbMCtb\nNhWu6ZuZlaZNfziwJmd5bXZdZ+tTcfTR8OabsLGry5eZWT83oAzH7NY8ELkaGhp2vM9kMmQymRKE\nk9hjDzjlFHjxRTjvvJId1sys1zQ1NdHU1LRbxyhqwjVJtcDPI+KUPNu+DTwZET/ILi8DPgiMAhoi\nYmJ2/a1ARMSdnZyjLBOu5brxRhg9Gr74xbKexsysV5RzwjXReQ3+MeBvswGcBbwdEW8A84GjJNVK\nGghMypZNjdv1zazaFWzekfQwkAEOkfQ6UA8MJKm13x8Rj0u6WNJKYCtwNcnG7ZJuBGaTXFweiIil\nZfo+ijJmDPzrv6YZgZlZuvr9fPq5/vxnOPDAZI79ffYp66nMzMrO8+kXsNdecOyxsGRJ2pGYmaWj\nqpI+uF3fzKqbk76ZWRVx0jczqyJV1ZEL8M47MHQobNoEA8pxa5qZWS9xR24R9t8fhg2DV19NOxIz\ns95XdUkf3MRjZtWrKpP+2LGeZtnMqlNVJn3X9M2sWlVdRy7A736X3KT11lvJoxTNzPoid+QW6bDD\nYN994bXX0o7EzKx3VWXSBzfxmFl1ctI3M6siTvpmZlXESd/MrIpUbdIfORL++MdkJI+ZWbUoKulL\nmihpmaTlkm7Js/1ASY9KWiRpnqQTcra9ll2/UNLzpQx+d0hw2mmu7ZtZdSmY9CXVAPcCFwInAldI\nOq5dsS8DCyPiVOBTwN0521qBTESMiYhxpQm7NNzEY2bVppia/jhgRUS0RMQ2YBZwWbsyJwBPAETE\nq8BISYdmt6nI8/Q6J30zqzbFJOPhwJqc5bXZdbkWAZcDSBoHHAmMyG4LYI6k+ZKu271wS8tJ38yq\nTalmlL8D+JakBcASYCGwPbttQkRsyNb850haGhFz8x2koaFhx/tMJkMmkylRePkddxysWwebN8N+\n+5X1VGZmu62pqYmmpqbdOkbBuXcknQU0RMTE7PKtQETEnV3s0wycHBFb2q2vBzZHxDfy7NNrc+/k\nOvNM+Jd/gQ98oNdPbWa2W8o198584ChJtZIGApOAx9qd+ABJe2bfXwf8V0RskbSvpMHZ9YOADwMv\ndSfAcnMTj5lVk4LNOxGxXdKNwGySi8QDEbFU0g3J5rgfOB74d0mtwMvANdndDwd+Kimy55oZEbPL\n8Y301JgxMG9e2lGYmfWOqpxaOdfzz8P118OLL/b6qc3MdktPmneqPun/6U9w8MHw9tuw1169fnoz\nsx7zfPo9sM8+UFcHL7+cdiRmZuVX9Ukf3JlrZtXDSR8nfTOrHk76OOmbWfWo+o5cgI0b4cgjk87c\nPfZIJQQzs25zR24PHXQQDBkCK1emHYmZWXk56We5icfMqoGTfpaTvplVAyf9LCd9M6sGTvpZY8cm\nSb9C+rXNzMrCST9r6FCoqUnm1zcz66+c9LMkN/GYWf/npJ9jzBhYsCDtKMzMysdJP4dr+mbW3xWV\n9CVNlLRM0nJJt+TZfqCkRyUtkjRP0gnF7ltJnPTNrL8r5hm5NcBy4HxgPcnjEydFxLKcMv9E8uzb\nRknHAvdFxF8Us2/OMVKbhqFNaysceCA0N8Mhh6QaiplZQeWahmEcsCIiWiJiGzALuKxdmROAJwAi\n4lVgpKRDi9y3YtTUwKmn+ilaZtZ/FZP0hwNrcpbXZtflWgRcDiBpHHAkMKLIfSuKm3jMrD8rVUfu\nHcBBkhYAnwcWAttLdOxe5aRvZv3ZgCLKrCOpubcZkV23Q0RsBj7dtiypGVgN7Fto31wNDQ073mcy\nGTKZTBHhldaYMfDP/9zrpzUzK6ipqYmmpqbdOkYxHbl7AK+SdMZuAJ4HroiIpTllDgD+GBHbJF0H\nTIiIKcXsm3OM1DtyAf7nf5LO3DffhH33TTsaM7POlaUjNyK2AzcCs4GXgVkRsVTSDZKuzxY7HnhJ\n0lLgQuCmrvbtToC9beBAOO44WLw47UjMzErPT87K49pr4fTT4bOfTTsSM7PO+clZJeLOXDPrr5z0\n83DSN7P+ys07eWzZAocfnjwofc89047GzCw/N++UyODBcMQRsKzDZBFmZn2bk34nPM2ymfVHTvqd\ncLu+mfVHTvqdcNI3s/7IHbmdePNNqKuDjRuT2TfNzCqNO3JLaMgQ2H//ZG59M7P+wkm/C27iMbP+\nxkm/C076ZtbfOOl3wUnfzPobJ/0uOOmbWX/jpN+FI49M5tf/7/9OOxIzs9Jw0u+C5Nq+mfUvTvoF\nOOmbWX9SVNKXNFHSMknLJd2SZ/v+kh6T9KKkJZKm5Gx7TdIiSQslPV/C2HuFk76Z9SfFPCO3BlhO\n8pzb9cB8YFJELMspcxuwf0TcJmkIyXNxD4+I9yStBk6PiI0FzlNRd+S2WboULrkEVq5MOxIzs12V\n647cccCKiGiJiG3ALOCydmUC2C/7fj/gDxHxXltcRZ6nIh1zTNKRu2lT2pGYme2+YpLxcGBNzvLa\n7Lpc9wInSFoPLCL7YPSsAOZImi/put0JNg177AEnnwyLFqUdiZnZ7itVDfxCYGFEDAPGAPdJGpzd\nNiEixgIXA5+X9IESnbPXeG59M+svBhRRZh1wZM7yiOy6XFcDtwNExCpJzcBxwAsRsSG7/veSfkrS\nXDQ334kaGhp2vM9kMmQymaK+iXIbMwbm5o3YzKz3NDU10dTUtFvHKKYjdw+SjtnzgQ3A88AVEbE0\np8x9wO8iYrqkw4EXgFOBd4GaiNgiaRAwG5geEbPznKciO3IBXngBPv1pWLw47UjMzHbqSUduwZp+\nRGyXdCNJwq4BHoiIpZJuSDbH/cDXgRmS2tLilyLiLUmjgJ9Kiuy5ZuZL+JXupJNgxQp4913Ye++0\nozEz6zk/RKVIp5wC3/senHFG2pGYmSV6UtN30i9Cc3ML558/g4EDWznjjBoaG6cwalRt2mGZWZVz\n0i+D5uYWLrjgHlatmg4MArZSV1fPnDlTnfjNLFV+XGIZTJs2IyfhAwxi1arpTJs2I8WozMx6xkm/\ngHXrWtmZ8NsMYv361jTCMTPbLU76BQwfXgNsbbd2K8OG+UdnZn2PM1cBjY1TqKurZ2fiT9r0Gxun\npBaTmVlPuSO3CM3NLUybNoN161p54YUaHnpoCh//uDtxzSxdHr3TC26/HZqb4f77047EzKqdk34v\n2LABTjgB1qyBwYMLlzczKxcP2ewFQ4fCBz8IP/hB2pGYmXWfk34PXHcdfOc7aUdhZtZ9Tvo9cOGF\nsHYtLFmSdiRmZt3jpN8DAwYkUy1/97tpR2Jm1j3uyO2h115LZtxcu9bTLZtZOtyR24tGjoSxY+HR\nR9OOxMyseE76u+G669zEY2Z9S1FJX9JEScskLZd0S57t+0t6TNKLkpZImlLsvn3ZpZfCSy/BypVp\nR2JmVpxinpFbAywneUbuemA+MCkiluWUuQ3YPyJukzSE5Jm6hwOthfbNOUafatNvc/PNsOeeyZ26\nZma9qVxt+uOAFRHREhHbgFnAZe3KBLBf9v1+wB8i4r0i9+3TrrkGZsyAbdvSjsTMrLBikv5wYE3O\n8trsulz3AidIWg8sAm7qxr592vHHw1FHwS9+kXYkZmaFDSjRcS4EFkbEhyTVAXMkndLdgzQ0NOx4\nn8lkyGQyJQqvvK69NunQ/djH0o7EzPqzpqYmmpqadusYxbTpnwU0RMTE7PKtQETEnTll/i9we0Q8\nnV3+f8AtJBeVLvfNOUafbNMH2LoVjjgCFi+GESPSjsbMqkW52vTnA0dJqpU0EJgEPNauTAvwF9kg\nDgeOAVYXuW+fN2gQTJoEDz6YdiRmZl0r6o5cSROBb5FcJB6IiDsk3UBSa79f0lBgBjA0u8vtEfFI\nZ/t2co4+W9MHWLAALr8cVq+GGt/9YGa9wPPpp+z005Ohmx/+cNqRmFk18DQMKbv2Wk+5bGaVzTX9\nEtq0CWprYflyOOywtKMxs/7ONf2UHXBAMmzzP/4j7UjMzPJz0i+xtiaePv6hxcz6KSf9EpswASR4\n+um0IzEz68hJv8Qkd+iaWeVyR24Z/P73cPTRydO1Djww7WjMrL9yR26FOPTQZKz+ww+nHYmZ2a6c\n9MvET9Uys0rkpF8m558Pb70Fv/1t2pGYme3kpF8mNTXJA1Zc2zezSuKO3DJauxZOOQXWrElm4jQz\nKyV35FaYESNg/Hj40Y/SjsTMLOGkX2bu0DWzSuKkX2YXXwyrVsErr6QdiZmZk37Z7bknTJkCDzyQ\ndiRmZt17ctY32fn0qzvbbb8ZmAwEsCdwPDAkIt6W9BqwCWgFtkXEuE7O0e86ctusXJm07a9ZA3vt\nlXY0ZtZflOXJWZJqgOXA+cB6kufeToqIZZ2U/yjwdxHR9szc1cDpEbGxwHn6bdIH+NCH4DOfgU9+\nMu1IzKy/KNfonXHAiohoiYhtwCzgsi7KXwE8khtXkefp1667zpOwmVn6iknGw4E1Octrs+s6kLQP\nMBH4Sc7qAOZImi/pup4G2td9/OOwcCE0N6cdiZlVswElPt4lwNyIeDtn3YSI2CDpUJLkvzQi5ubb\nuaGhYcf7TCZDJpMpcXjp2XtvuOqqpEP3619POxoz64uamppoamrarWMU06Z/FtAQEROzy7cC0b4z\nN7vtUeCHETGrk2PVA5sj4ht5tvXrNn2AJUtg4kRoaYEBpb7cmlnVKVeb/nzgKEm1kgYCk4DH8pz8\nAOCDwM9y1u0raXD2/SDgw8BL3QmwPzn5ZDjiCPjlL9OOxMyqVcGkHxHbgRuB2cDLwKyIWCrpBknX\n5xT9GPCriPhTzrrDgbmSFgLzgJ9HxOzShd/3uEPXzNLkCdd62ZYtSW3/5Zdh2LC0ozGzvswTrvUB\ngwfDX/0VzJiRdiRmVo1c00/B88/DFVfAihXJvPtmZj3hmn4f8f73JzX+J59MOxIzqzZO+imQ4Npr\nPeWymfU+N++kZOHCFs48cwbjxrUycmQNjY1TGDWqNu2wzKwPKcuEa72lmpJ+c3MLF1xwD6tWTQcG\nAVupq6tnzpypTvxmVjS36fcR06bNyEn4AINYtWo6U6bMYPVqaG1NMzoz6888GUAK1q1rZWfCbzOI\nl15q5dxzYdMmOOmk5A7ek09OHq5+8slw8MFdH7e5uYVp02awbl0rw4e7ycjMOnLST8Hw4TXAVnZN\n/Fu56KIavv99eOsteOmlZK6exYvhkUeS5f3263ghOP745MEs+ZqM5s1zk5GZ7cpt+inoSZt+RDJR\nW9uFYMmS5LV6NYwaBVu3Tuf112+m/YVk8uS7+P7363vhuzKz3taTNn3X9FMwalQtc+ZMZdq0u1i/\nvpVhw2pobOy6Ri7ByJHJ65JLdq7/859h2TK44or8TUbr17uDwMx2ctJPyahRtSWpge+1F5x6Kowd\nW8PSpR2bjF5/vYbVq2H06N0+lZn1Ax690080Nk6hrq6epK8AYCsjR9Zz0UVTGDcOrrkmaQoys641\nN7dw1VXTOe+8eq66ajrNzS0Vdbzd5Tb9fqRt9M7OJqNk9M7GjfDNb8J998Gll8JXvgJ1dWlHa1Z5\nSn0PTbnvyfHNWdaljRvhW9+Ce+9N+gW+8hU46qi0ozKrHFddNZ2ZMzsOiJg48S5uu62eLVvo1mvl\nyuls3ly+ARbuyLUuHXQQNDTA3/1dkvzPOgs+8hH46lfh6KPTjs4sHa2tyWCI556DJ5/MPyBi7txW\nvvrVZKLEfK/3va/juv32g89+tpXnnqusARZFJX1JE4FvkvQBPND++biSbgYmAwHsCRwPDImItwvt\na73vwAOhvh5uugnuvhvGj4eLLkqS/zHHpB2dWXmtX59Mb/7cc8nXF16AQw+FceNg6NAa1q/vOCDi\nssuSe2i666ijanjuuY7HGzYsxe7UiOjyRZKsVwK1JAn9ReC4Lsp/FPh1d/dNQrE0vP12RGNjxJAh\nEVddFbFsWdoRmRVn9erXYvLkhshkvhaTJzfE6tWv7bJ98+aIJ5+MuPPOiMsvjxgxIuKQQyIuuiii\nvj7i8ccjfv/7XY9XV/f3AVsiuTtmS9TV/X2H43YnvlIer71s3iyYx3NfBdv0JZ0F1EfERdnlW7Mn\nyltjlzQTeCIiHujOvm7TT98778A99ySdvhdemNT899rLUztYZcrXSTpiRD2f+cxUVq+u5fnnkxFr\np56a1OLPPDP5Onp0ct9LV8fNNyBid+Is5fFylaUjV9JfAhdGxPXZ5auAcRHxhTxl9wHWAnWRNO10\nZ18n/QrxzjtJZ+9dd7Wwbds9bNni2UCrTV+Yx+kv/3I6jz7asZN01Ki7uPnmes48M5mqZODAtCIs\nv0royL0EmBsRb/dk54aGhh3vM5kMmUymNFFZt+y/P3z5y7Bo0Qx++MOOs4HedttdzJrlqR0qRakT\ndCXO47R9O7z8Mjz9NDzzTPJqacnf6TpyZCuf+1waUZZfU1MTTU1Nu3eQQu0/wFnAL3OWbwVu6aTs\no8CkHu5bkjYuK51M5mvZdshdX9LX4v3vj/jCFyJmzYpoaYlobU072upU6jbj1taIv/7rhpzjxY7j\nTp7cUOLoO7dpU8Ts2RENDREXXBCx//4Rxx4bcfXVEd/5TsTLL0dceWX6caaNHrTpF1PTnw8cJakW\n2ABMAq5oX0jSAcAHSUbxdGtfq0ydzQb6yU/W8PnPJ7WtRx6BqVOTj9Bnn52MBDr7bBgzJpkiIp++\n0HTQV3T2bIYrr7yLv/mbZFz51q10+Jpv3ZYt8Mc/AuSvQT/+eCvXXANHHLHzNWJE8nW//QrH2tnv\nPQJee23XWvzKlTB2LEyYkPx9PfwwDBmy6/G+/vUpPPdcfYcbnxobp+7Oj7TfK5j0I2K7pBuB2ewc\ndrlU0g3J5rg/W/RjwK8i4k+F9i35d2Fl0dg4hXnzOv5T3X77VEaNgnPOScpFJB1mzz6b/MM+9BAs\nXw6nnbbzInD22TB0aGU2HfQ1774Lv/1t8rP+1a/yJ+jm5laWLEnGiw8atHMc+aBBXX/dd1/41Kdq\nmDmz48X+1FNrOPNMWLMG5s5Nvra9Bg7seCHIfb33XguXXrrr7/2Xv6znjDOmsmhRLVKS4MePhylT\nkr+dQm3xPZm40HxHrhXQ05EHmzfD/PlJYnr22eR1wAEQMZ2WFk8B3R1vvJH8HNtqwosWJc9RGD8e\nFiyYztNPl/bn2d2pAyKSu73bLgBr1+56QVi7Flavnk5ra8c4x4+/i5kz66mt7XpEjeXnaRisYrW2\nJrX/j3+8nmXLpnfYPnRoPVOnTmf0aHa8Dj64+ETQV5qMCsW5fTu88squTR1/+EPySamtJjxuXFIz\nbzteOeZ2KfUww/POq6epqePv/bzz6nniiY7rrTiVMHrHLK+aGjjuODj99BqWLevYdDBiRA0bN8KP\nfpQ0Fa1endQgR49OHhKTezEYPRpqa3f2GfSVJqN8cT7zTD3Tp0+lubmWZ56BefPgsMOSBH/OOXDr\nrcnPraaTGzjL1cRRqqm/23TWP5TqnanVqrs9v+V64dE7VaE7o03eeivihRcifvjDiDvuiLjhhmQk\nR11dxMCByd2V554bMXp03xjFMXly/jgPPbQhvvSliJ/9LOJ3v0s7yvIo952p1Yoyjd4xK5nu1EwP\nOghOPz15tffee21txfC5z+XvzHzmmVaeeCK5E3NQ+829ICJp0nrqKfjNb+DHP84f50kntXJnP5+R\nyp2ulcNJ33pdKZoOBgzY+fjIM86o4dVXOzYd7L13DdOm7ez4nDABPvCB5OvQobt1+ry2b0/O9dRT\nO197750005x7Lrz1Vg2/+EX1NnGUusnIesYdudbnFerMfPfdZCbFp59Ohho+/XTyKSL3InD88R3b\nzQt1uv75z8kIpd/8Jknwzz4Lw4YlSb7tVVtbfJxm3eXRO1a1ujPapG3+9LYLwNy5yZDD8eN3XggO\nPbSFj3501wQ9alQ9X/vaVFasqOWpp2DBguRi0Zbgk/1KF6dZIU76Zj20YUNyAWi7CCxcOJ3t2zuO\nKz/ssLu4/vp6zjknGUZZzJ2oZuXiIZtmPTR0KHziE8kL4NxzW3nqqY6driee2EpjY6+HZ1Yy1dGD\nZNZNRx7ZNq48V/V0ulr/5b9gszwaG6dQV1fPzsTfNpnXlNRiMisFt+mbdcKdrlbp3JFrZlZFepL0\n3bxjZlZFnPTNzKpIUUlf0kRJyyQtl3RLJ2UykhZKeknSkznrX5O0KLvt+VIFbmZm3Vcw6UuqAe4F\nLgROBK6QdFy7MgcA9wEfjYiTgL/K2dwKZCJiTESMK1nkKdjtBxL3EsdZWo6ztBxnuoqp6Y8DVkRE\nS0RsA2YBl7UrcyXwk4hYBxARb+ZsU5HnqXh95Y/AcZaW4ywtx5muYpLxcGBNzvLa7LpcxwAHS3pS\n0nxJf5OzLYA52fXX7V64Zma2O0o1DcMAYCzwIZLJSp6V9GxErAQmRMQGSYeSJP+lETG3ROc1M7Nu\nKDhOX9JZQENETMwu30rytJY7c8rcAuwdEdOzy98F/jMiftLuWPXA5oj4Rp7zeJC+mVk3lWPCtfnA\nUZJqgQ3AJOCKdmV+BtwjaQ9gL+BM4BuS9gVqImKLpEHAh4G8T0HubuBmZtZ9BZN+RGyXdCMwm6QP\n4IGIWCrphmRz3B8RyyT9ClgMbAfuj4hXJI0CfpqtxQ8AZkbE7PJ9O2Zm1pWKmYbBzMzKL/WhlMXc\n+JU2SSMkPSHpZUlLJH0h7Zi6IqlG0gJJj6UdS2ckHSDpR5KWZn+uZ6YdU3uS/lf2ZsPFkmZKGph2\nTG0kPSDpDUmLc9YdJGm2pFcl/Sp7/0ylxfhP2d/5i5J+Imn/NGPMxtQhzpxtfy+pVdLBacTWLpa8\ncUqamv3G0spKAAADg0lEQVSZLpF0R6HjpJr0i7nxq0K8B3wxIk4EzgY+X6FxtrkJeCXtIAr4FvB4\nRBwPnAosTTmeXUgaBkwFxkbEKSTNk5PSjWoXD5L83+S6Ffh1RBwLPAHc1utR7SpfjLOBEyPiNGAF\n6ccI+eNE0gjgAqCl1yPKr0OckjLAJcDJEXEycFehg6Rd0y/mxq/URcR/R8SL2fdbSBJU+3sVKkL2\nD/Vi4Ltpx9KZbO3unIh4ECAi3ouId1IOK589gEGSBgD7AutTjmeH7LDnje1WXwb8e/b9vwMf69Wg\n2skXY0T8OiJas4vzgBG9Hlg7nfwsAf4V+IdeDqdTncT5WeCOiHgvW+bNDju2k3bSL+bGr4oiaSRw\nGvBcupF0qu0PtZI7a0YBb0p6MNsMdb+kfdIOKldErAf+BXgdWAe8HRG/Tjeqgg6LiDcgqagAh6Uc\nTyGfBv4z7SDykXQpsCYilqQdSwHHAOdKmpe9OfaMQjuknfT7FEmDgR8DN2Vr/BVF0keAN7KfSpR9\nVaK2m/nui4ixwB9JmiYqhqQDSWrOtcAwYLCkK9ONqtsq9sIv6SvAtoh4OO1Y2stWQL4M1OeuTimc\nQgYAB0XEWcCXgB8W2iHtpL8OODJneUR2XcXJfsT/MfAfEfGztOPpxATgUkmrgUeA8yQ9lHJM+awl\nqUW9kF3+MclFoJL8BbA6It6KiO3Ao8D4lGMq5A1JhwNIeh/wu5TjyUvSFJImyEq9iNYBI4FFkppJ\n8tJvJVXiJ6c1JH+bRMR8oFXSIV3tkHbS33HjV3ZkxCSgUkecfA94JSK+lXYgnYmIL0fEkRExmuRn\n+URE/G3acbWXbYJYI+mY7KrzqbyO59eBsyTtLUkkMVZUZzMdP809BkzJvv8UyU2TadslRkkTSZof\nL42IP6cWVUc74oyIlyLifRExOiJGkVRSxkREJVxE2//O/w/J9Ddk/5/2jIg/dHWAVJN+tgbVduPX\ny8CsiKi0fywkTQAmAx/KPhdgQfaP13ruC8BMSS+SjN75x5Tj2UVEPE/yCWQhsIjkH+3+VIPKIelh\n4BngGEmvS7oauAO4QNKrJBepgsP3UojxHmAwyTxcCyT97zRjhE7jzBVUQPNOJ3F+DxgtaQnwMFCw\nkuebs8zMqkjazTtmZtaLnPTNzKqIk76ZWRVx0jczqyJO+mZmVcRJ38ysijjpm5lVESd9M7Mq8v8B\nvQBp8jPaPM8AAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1f2e2ba8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -1015,9 +1041,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rss: 133118842702196\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_k = 8\n",
+    "prediction = multiple_knn(min_k, features_train, output_train, features_test)\n",
+    "error = prediction-output_test\n",
+    "rss = (error*error).sum()\n",
+    "print('rss: '+str(rss))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
