--- a/ml-classification/module-2-linear-classifier-assignment-blank.ipynb
+++ b/ml-classification/module-2-linear-classifier-assignment-blank.ipynb
@@ -954,11 +954,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.0, 2.0, 1.0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\"><table frame=\"box\" rules=\"cols\">\n",
+       "    <tr>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">name</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">review</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">rating</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">word_count</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">sentiment</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Our Baby Girl Memory Book</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Absolutely love it and<br>all of the Scripture in ...</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">5.0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'and': 2L, 'all': 1L,<br>'love': 1L, ...</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Wall Decor Removable<br>Decal Sticker - Colorful ...</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Would not purchase again<br>or recommend. The decals ...</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">2.0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'and': 1L, 'wall': 1L,<br>'them': 1L, 'decals': ...</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">New Style Trailing Cherry<br>Blossom Tree Decal ...</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Was so excited to get<br>this product for my baby ...</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">1.0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'all': 1L, 'money': 1L,<br>'into': 1L, 'it': 3L, ...</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">-1</td>\n",
+       "    </tr>\n",
+       "</table>\n",
+       "[3 rows x 5 columns]<br/>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Columns:\n",
+       "\tname\tstr\n",
+       "\treview\tstr\n",
+       "\trating\tfloat\n",
+       "\tword_count\tdict\n",
+       "\tsentiment\tint\n",
+       "\n",
+       "Rows: 3\n",
+       "\n",
+       "Data:\n",
+       "+-------------------------------+-------------------------------+--------+\n",
+       "|              name             |             review            | rating |\n",
+       "+-------------------------------+-------------------------------+--------+\n",
+       "|   Our Baby Girl Memory Book   | Absolutely love it and all... |  5.0   |\n",
+       "| Wall Decor Removable Decal... | Would not purchase again o... |  2.0   |\n",
+       "| New Style Trailing Cherry ... | Was so excited to get this... |  1.0   |\n",
+       "+-------------------------------+-------------------------------+--------+\n",
+       "+-------------------------------+-----------+\n",
+       "|           word_count          | sentiment |\n",
+       "+-------------------------------+-----------+\n",
+       "| {'and': 2L, 'all': 1L, 'lo... |     1     |\n",
+       "| {'and': 1L, 'wall': 1L, 't... |     -1    |\n",
+       "| {'all': 1L, 'money': 1L, '... |     -1    |\n",
+       "+-------------------------------+-----------+\n",
+       "[3 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sample_test_data = test_data[10:13]\n",
     "print sample_test_data['rating']\n",
@@ -974,11 +1050,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Absolutely love it and all of the Scripture in it.  I purchased the Baby Boy version for my grandson when he was born and my daughter-in-law was thrilled to receive the same book again.'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sample_test_data[0]['review']"
    ]
@@ -994,11 +1081,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Would not purchase again or recommend. The decals were thick almost plastic like and were coming off the wall as I was applying them! The would NOT stick! Literally stayed stuck for about 5 minutes then started peeling off.'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sample_test_data[1]['review']"
    ]
@@ -1018,11 +1116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.734619727058498, -5.734130996759885, -14.668460404467897]\n"
+     ]
+    }
+   ],
    "source": [
     "scores = sentiment_model.predict(sample_test_data, output_type='margin')\n",
     "print scores"
@@ -1051,12 +1157,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1L, -1L, -1L]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def predict_class(scores):\n",
+    "    return scores.apply(lambda x: +1 if x > 0 else -1)\n",
+    "print predict_class(scores)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1067,11 +1185,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class predictions according to GraphLab Create:\n",
+      "[1L, -1L, -1L]\n"
+     ]
+    }
+   ],
    "source": [
     "print \"Class predictions according to GraphLab Create:\" \n",
     "print sentiment_model.predict(sample_test_data)"
