--- a/ml-classification/module-2-linear-classifier-assignment-blank.ipynb
+++ b/ml-classification/module-2-linear-classifier-assignment-blank.ipynb
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -1222,12 +1222,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.9988123848377187, 0.003223268181801879, 4.261557996658069e-07]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_propabilities(scores):\n",
+    "    return scores.apply(lambda x: 1.0/(1.0+math.exp(-x)))\n",
+    "print calculate_propabilities(scores)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1238,11 +1250,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class predictions according to GraphLab Create:\n",
+      "[0.9988123848377188, 0.0032232681818018796, 4.2615579966580676e-07]\n"
+     ]
+    }
+   ],
    "source": [
     "print \"Class predictions according to GraphLab Create:\" \n",
     "print sentiment_model.predict(sample_test_data, output_type='probability')"
