--- a/ml-classification/module-2-linear-classifier-assignment-blank.ipynb
+++ b/ml-classification/module-2-linear-classifier-assignment-blank.ipynb
@@ -1298,12 +1298,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------------------+-------------------------------+--------+\n",
+      "|              name             |             review            | rating |\n",
+      "+-------------------------------+-------------------------------+--------+\n",
+      "| Britax Decathlon Convertib... | I researched a few differe... |  4.0   |\n",
+      "| Ameda Purely Yours Breast ... | As with many new moms, I c... |  4.0   |\n",
+      "| Traveling Toddler Car Seat... | I am sure this product wor... |  2.0   |\n",
+      "| Shermag Glider Rocker Comb... | After searching in stores ... |  4.0   |\n",
+      "| Cloud b Sound Machine Soot... | First off, I love plush sh... |  5.0   |\n",
+      "| JP Lizzy Chocolate Ice Cla... | I got this bag as a presen... |  4.0   |\n",
+      "| Fisher-Price Rainforest Me... | My daughter wasn't able to... |  5.0   |\n",
+      "| Lilly Gold Sit 'n' Stroll ... | I just completed a two-mon... |  5.0   |\n",
+      "|  Fisher-Price Deluxe Jumperoo | I had already decided that... |  5.0   |\n",
+      "| North States Supergate Pre... | I got a couple of these to... |  4.0   |\n",
+      "+-------------------------------+-------------------------------+--------+\n",
+      "+-------------------------------+-----------+-------------+\n",
+      "|           word_count          | sentiment | probability |\n",
+      "+-------------------------------+-----------+-------------+\n",
+      "| {'all': 1L, 'toted': 1L, '... |     1     |     1.0     |\n",
+      "| {'lansinoh': 1L, 'six': 1L... |     1     |     1.0     |\n",
+      "| {'all': 1L, 'just': 1L, 'p... |     -1    |     1.0     |\n",
+      "| {'spotclean': 1L, 'code': ... |     1     |     1.0     |\n",
+      "| {'cute': 1L, 'all': 2L, 's... |     1     |     1.0     |\n",
+      "| {'knot': 1L, 'just': 4L, '... |     1     |     1.0     |\n",
+      "| {'cute': 1L, 'all': 3L, 's... |     1     |     1.0     |\n",
+      "| {'son': 2L, 'infant': 1L, ... |     1     |     1.0     |\n",
+      "| {'all': 1L, 'just': 1L, 's... |     1     |     1.0     |\n",
+      "| {'gates': 5L, 'just': 1L, ... |     1     |     1.0     |\n",
+      "+-------------------------------+-----------+-------------+\n",
+      "[20 rows x 6 columns]\n",
+      "Note: Only the head of the SFrame is printed.\n",
+      "You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_data['probability'] = sentiment_model.predict(test_data, output_type='probability')\n",
+    "topk = test_data.topk('probability', 20)\n",
+    "print topk"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1317,13 +1359,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------------------+-------------------------------+--------+\n",
+      "|              name             |             review            | rating |\n",
+      "+-------------------------------+-------------------------------+--------+\n",
+      "| Jolly Jumper Arctic Sneak ... | I am a \"research-aholic\" i... |  5.0   |\n",
+      "| Levana Safe N'See Digital ... | This is the first review I... |  1.0   |\n",
+      "| Snuza Portable Baby Moveme... | I would have given the pro... |  1.0   |\n",
+      "| Fisher-Price Ocean Wonders... | We have not had ANY luck w... |  2.0   |\n",
+      "| VTech Communications Safe ... | This is my second video mo... |  1.0   |\n",
+      "| Safety 1st High-Def Digita... | We bought this baby monito... |  1.0   |\n",
+      "| Chicco Cortina KeyFit 30 T... | My wife and I have used th... |  1.0   |\n",
+      "| Prince Lionheart Warmies W... | *****IMPORTANT UPDATE*****... |  1.0   |\n",
+      "| Valco Baby Tri-mode Twin S... | I give one star to the dim... |  1.0   |\n",
+      "| Adiri BPA Free Natural Nur... | I will try to write an obj... |  2.0   |\n",
+      "+-------------------------------+-------------------------------+--------+\n",
+      "+-------------------------------+-----------+--------------------+\n",
+      "|           word_count          | sentiment |    probability     |\n",
+      "+-------------------------------+-----------+--------------------+\n",
+      "| {'raining': 1L, 'all': 8L,... |     1     | 7.80415068214e-100 |\n",
+      "| {'all': 2L, 'just': 1L, 'b... |     -1    | 6.83650885516e-25  |\n",
+      "| {'contacted': 1L, 'being':... |     -1    | 2.12654510824e-24  |\n",
+      "| {'fishstarfish': 1L, 'all'... |     -1    |  2.2458208078e-23  |\n",
+      "| {'all': 4L, 'reviewers': 1... |     -1    | 1.32962966148e-22  |\n",
+      "| {'all': 3L, 'being': 1L, '... |     -1    |  2.0687209747e-20  |\n",
+      "| {'all': 4L, 'wrestle': 1L,... |     -1    | 5.93881994674e-20  |\n",
+      "| {'less': 1L, 'move': 1L, '... |     -1    | 6.28510016542e-20  |\n",
+      "| {'limited': 2L, 'forget': ... |     -1    | 8.05528712694e-20  |\n",
+      "| {'all': 2L, 'forget': 1L, ... |     -1    | 8.46521724948e-20  |\n",
+      "+-------------------------------+-----------+--------------------+\n",
+      "[20 rows x 6 columns]\n",
+      "Note: Only the head of the SFrame is printed.\n",
+      "You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns.\n"
+     ]
+    }
+   ],
+   "source": [
+    "topk_reverse = test_data.topk('probability', 20, True)\n",
+    "print topk_reverse"
+   ]
   },
   {
    "cell_type": "markdown",
